2009-02-24  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* debian/cairo-compmgr-dev.install:
	* debian/cairo-compmgr-doc.install:
	* debian/cairo-compmgr-plugins.install:
	* debian/cairo-compmgr-vala.install:
	* debian/cairo-compmgr.install:
	* debian/changelog:
	* debian/compat:
	* debian/control:
	* debian/copyright:
	* debian/libcairo-compmgr-dev.install:
	* debian/libcairo-compmgr0.install:
	* debian/rules:
	  - Append debian package directory.

2009-02-22  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* shave-libtool.in:
	* shave.in:
	  - Update with latest git version of shave.

2009-02-22  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* lib/test-config.c (on_config_changed), (main):
    * lib/Makefile.am:
      - Add config test utility.
    * lib/ccm-config-key.c:
    * lib/ccm-config-key.h:
    * lib/ccm-config-schema.c:
    * lib/ccm-config.c:
      - Implement key file backend for configuration need to be more tested.
    * plugins/automate/ccm-automate.plugin.desktop.in:
      - Fix name of plugin
    * src/ccm-cell-renderer-extension.c:
    * src/ccm-preferences-page.c:
      - Fix a memory leak.
    * src/ccm-screen.c:
      - Force map visible window on screen query_stack.

2009-02-21  Nicolas Bruguier  <gandalfn@club-internet.fr>

    It's a long time I don't push modifications due a lack of time to
    synchronize my job branches with official repos and I have many changes :(
    Here is a list of changes since the last commit:
    - merge input redirection experimental branch
    - merge bindings experimental branch
    - remove all libgnome deps
    - beginning to new configuration api to have gconf optionnal
    - new snapshot plugin
    - new automate plugin (WIP)
    - add preferences ui and plugin API
    - fix many many issues
    - add vala plugin bindings
    - gobject introspection support
    - ...
    
	* data/cairo-compmgr.pc.in:
	* data/ccm-display.schema-key.in:
	* data/ccm-preferences.ui:
	* data/ccm-screen.schema-key.in: