@@ -233,7 +233,7 @@ if [ test x$glitzbackend = xyes ]; then
 fi                  
 AM_CONDITIONAL(HAVE_GLITZ_TFP_BACKEND, [test x$glitztfpbackend = xyes])
 
-SHAVE_INIT([.])
+SHAVE_INIT([.],[enable])
 
 AC_OUTPUT([
 shave
